@@ -1,7 +1,0 @@
-package cs3500.music.model;
-
-/**
- * Created by Ari on 4/15/2016.
- */
-public class NoteAdapter extends OurNote implements Note {
-}
