@@ -1,7 +1,5 @@
 package cs3500.music.view;
 
-import java.awt.event.KeyListener;
-
 /**
  * A interface that makes sure every view can be run
  * Represents some sort of view for the music editor
